# yachtSQL

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: aggregations.rs  basic_operations.rs  complex_queries.rs  data_types.rs  functions.rs  helpers.rs  joins.rs  merge.rs  optimizer.rs  optimizer_bench.rs  optimizer_comparison.rs  optimizer_comparison_quick.rs  profiling.rs  quick.rs  runner.rs  scalability.rs  storage_formats.rs  subquery_caching.rs
bucket/export/: data  data.avro  data.csv  data.json  data.parquet
crates/capability/: Cargo.toml  test_phase_improvements.sh
crates/capability/src/: config.rs  error.rs  feature.rs  feature_defs.rs  feature_ids.rs  feature_registry_builder.rs  lib.rs  manifest_loader.rs  profiles.rs  registry.rs  resolver.rs  sql_features.rs
crates/capability/src/manifests/: bigquery.rs  clickhouse.rs  mod.rs  postgres.rs
crates/capability/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  float_utils.rs  lib.rs  result.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  static_cell.rs  value_size_test.rs
crates/core/src/diagnostics/: diagnostic_area.rs  mod.rs
crates/core/src/types/: coercion.rs  collation.rs  conversion.rs  mod.rs  small_value.rs  tuple_ops.rs
crates/core/tests/: arc_correctness.rs  numeric_decimal_type_comprehensive_tdd_tmp.rs
crates/core/tests/common/: mod.rs
crates/dialects/bigquery/: Cargo.toml
crates/dialects/clickhouse/: Cargo.toml
crates/dialects/core/: Cargo.toml
crates/dialects/core/src/: lib.rs
crates/dialects/postgres/: Cargo.toml
crates/dialects/postgres/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: ast_cache.rs  async_executor.rs  catalog.rs  catalog_adapter.rs  concurrent_catalog.rs  correlation.rs  error.rs  evaluator.rs  executor.rs  ir_evaluator.rs  js_udf.rs  legacy_executor.rs  lib.rs  match_recognize.rs  materialized_view_registry.rs  multiset_operations.rs  pattern_matching.rs  plan.rs  plan_cache.rs  plan_executor.rs  record_batch.rs  resource_limits.rs  sql_normalizer.rs  table.rs  temporal_queries.rs  temporal_tables.rs  trigger_execution.rs
crates/executor/tests/: adversarial_null_tests.rs  aggregate_clickhouse_functions.rs  aggregate_functions_advanced.rs  aggregations.rs  basic_queries.rs  case_expressions.rs  coalesce_nullif.rs  create_table_basic.rs  date_time_functions.rs  delete_basic.rs  delete_where.rs  dialect_normalization_regression_tests.rs  distinct.rs  drop_table_basic.rs  edge_cases.rs  enum_sizes.rs  error_handling.rs  having.rs  (+27 more)
crates/functions/: Cargo.toml
crates/ir/: Cargo.toml
crates/ir/src/: expr.rs  function.rs  lib.rs  plan.rs
crates/ir/src/expr/: functions.rs  mod.rs
crates/ir/src/plan/: ddl.rs  gap_fill.rs  mod.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: catalog.rs  classifier.rs  cost_model.rs  grouping_sets.rs  lib.rs  optimized_logical_plan.rs  ordering.rs  phase.rs  physical_plan.rs  planner.rs  priority.rs  properties.rs  rule.rs  statistics.rs  telemetry.rs  tests.rs  visitor.rs
crates/optimizer/src/rules/: aggregate_pushdown.rs  boolean_simplification.rs  constant_folding.rs  cse.rs  distinct_elimination.rs  eliminate_redundant.rs  example_visitor_rule.rs  expression_normalization.rs  filter_merge.rs  filter_merge_v2.rs  filter_reorder.rs  in_list_conversion.rs  index_selection.rs  interesting_order.rs  join_reorder.rs  late_materialization.rs  limit_pushdown.rs  materialization_points.rs  mod.rs  null_propagation.rs  partition_pruning.rs  predicate_pushdown.rs  projection_pushdown.rs  range_merge.rs  sort_elimination.rs  subquery_flattening.rs  union_optimization.rs  window_optimization.rs
crates/parser/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/benches/: README.md  simd_filter_benchmark.rs
crates/storage/src/: bitmap.rs  column.rs  column_ops.rs  constraints.rs  custom_types.rs  dependency_graph.rs  domain.rs  extension.rs  foreign_keys.rs  index.rs  lib.rs  mvcc.rs  record.rs  row.rs  schema.rs  sequence.rs  storage_backend.rs  temp_storage.rs  transaction.rs  trigger.rs  type_registry.rs  view.rs
crates/storage/src/features/: mod.rs
crates/storage/src/indexes/: btree_index.rs  hash_index.rs  index_key.rs  mod.rs
crates/storage/src/simd/: avx.rs  backend.rs  mod.rs  neon.rs  scalar.rs
crates/storage/src/table/: auto_increment.rs  constraints.rs  core.rs  data_ops.rs  indexes.rs  iterator.rs  mod.rs  partition.rs  query_ops.rs  schema_ops.rs  statistics.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
src/: lib.rs
tests/: advanced_math_functions_extreme_edge_cases_tdd.rs  aggregate_numeric_type_inference_tdd.rs  alter_table_extreme_edge_cases_tdd.rs  approx_quantiles_tdd.rs  array_operations_comprehensive_tdd.rs  arrays_tdd.rs  comparison_operators.rs  composite_types_tdd.rs  conditional_expressions_comprehensive_tdd.rs  conditional_expressions_extreme_edge_cases_tdd.rs  conditional_expressions_tdd.rs  copy_command_comprehensive_tdd.rs  create_drop_index_integration.rs  ddl_operations_bq.rs  ddl_operations_ch.rs  ddl_operations_pg.rs  delete_enhancements_tdd.rs  domain_types_tdd.rs  e2e_common.rs  e2e_conditional_expressions_bq.rs  e2e_conditional_expressions_pg.rs  enum_types_tdd.rs  extensions_tdd.rs  filter_clause_tdd.rs  fulltext_tdd.rs  geometric_tdd.rs  hstore_tdd.rs  index_edge_cases_stress_test.rs  index_implementation_integration_test.rs  index_scan_optimization_test.rs  inet_types_tdd.rs  insert_comprehensive_verification.rs  insert_verification.rs  interval_tdd.rs  lateral_tdd.rs  macaddr_types_tdd.rs  materialized_views_tdd.rs  math_functions_bq.rs  math_functions_ch.rs  math_functions_pg.rs  (+46 more)
tests/common/: assertions.rs  mod.rs
tests/e2e/: constraints_keys_bq.rs  constraints_keys_ch.rs  constraints_keys_pg.rs
tests/postgresql/: main.rs
tests/sql-queries/: postgresql_schema_demo.sql
(+646 files in other folders)
