[package]
name = "yachtsql-capability"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL SQL:2023 feature capability tracking and registry"

[dependencies]
# YachtSQL crates
yachtsql-core = { path = "../core" }
yachtsql-parser = { path = "../parser" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
indexmap = { version = "2.12", features = ["serde"] }

[lints.clippy]
large-enum-variant = "warn"
enum-variant-names = "warn"
wildcard-enum-match-arm = "warn"

[dev-dependencies]
yachtsql = { path = "../.." }
yachtsql-test-utils = { path = "../test-utils" }

