[package]
name = "yachtsql-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core types and errors for YachtSQL"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
indexmap = { version = "2.12", features = ["serde"] }
ordered-float = "4.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Decimal arithmetic for NUMERIC/DECIMAL types
rust_decimal = { version = "1.36", features = ["serde"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Binary encoding
base64 = "0.22"

# Unicode normalization for collations
unicode-normalization = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
debug_print = "1.0"

[dev-dependencies]
yachtsql = { path = "../.." }
yachtsql-test-utils = { path = "../test-utils" }
criterion = { version = "0.5", features = ["html_reports"] }
