[package]
name = "yachtsql-optimizer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL query optimizer with multi-phase rule-based transformations"

[dependencies]
# Core types and errors
yachtsql-common = { path = "../common" }
yachtsql-storage = { path = "../storage" }
yachtsql-ir = { path = "../ir" }

# SQL parsing
sqlparser = { version = "0.59", features = ["visitor"] }

# Data structures
indexmap = { version = "2.12", features = ["serde"] }
ordered-float = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Debug printing
debug_print = "1.0"

[dev-dependencies]
yachtsql = { path = "../.." }
yachtsql-test-utils = { path = "../test-utils" }
