[package]
name = "yachtsql-dialects-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared helpers for YachtSQL dialect manifests"

[dependencies]
yachtsql-capability = { path = "../../capability" }
yachtsql-parser = { path = "../../parser" }

[lints.clippy]
large-enum-variant = "warn"
enum-variant-names = "warn"
wildcard-enum-match-arm = "warn"
