[package]
name = "yachtsql-dialects-postgres"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "PostgreSQL dialect manifest for YachtSQL"

[dependencies]
yachtsql-capability = { path = "../../capability" }
yachtsql-dialects-core = { path = "../core" }
yachtsql-parser = { path = "../../parser" }

[lints.clippy]
large-enum-variant = "warn"
enum-variant-names = "warn"
wildcard-enum-match-arm = "warn"
